# pg-backup-bot

./: .env.template  Cargo.toml
src/: db.rs  discord.rs  main.rs  postgres.rs  telegram.rs
