[package]
name = "telegram-pg-backup-bot"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
reqwest = { version = "0.12.22", features = ["json", "multipart", "stream"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
bytes = "1.6"
